--- a/web/www/css/default.css
+++ b/web/www/css/default.css
@@ -117,7 +117,7 @@ h3 {
     padding: 10px;
 }
 
-.header-botton {
+.header-button {
     position: relative;
     top: -50px;
     float: right;
@@ -126,7 +126,7 @@ h3 {
     margin-right: 20px;
 }
 
-.header-botton li {
+.header-button li {
     float: left;
     margin: 0 10px;
 }
