--- a/web/www/view/artical_add.html
+++ b/web/www/view/artical_add.html
@@ -20,7 +20,7 @@
                 <li><a href="./about.html">关于</a></li>
             </ul>
         </div>
-        <div class="header-botton">
+        <div class="header-button">
             <ul>
                 <li><a href="./sign_in.html">登陆</a></li>
                 <li><a href="./sign_up.html">注册</a></li>
