--- a/web/www/view/sign_in.html
+++ b/web/www/view/sign_in.html
@@ -20,7 +20,7 @@
                 <li><a href="./about.html">关于</a></li>
             </ul>
         </div>
-        <div class="header-botton">
+        <div class="header-button">
             <ul>
                 <li><a href="./sign_in.html">登陆</a></li>
                 <li><a href="./sign_up.html">注册</a></li>
@@ -29,6 +29,15 @@
     </header>
 
     <div class="container">
+      <div class="user_name">
+
+      </div>
+      <div class="user_psw">
+
+      </div>
+      <div class="sign_button">
+        <button type="submit" class="sign_in"></button>
+      </div>
 
     </div>
 
