注册 & 登陆页面及样式

--- a/web/www/view/sign_in.html
+++ b/web/www/view/sign_in.html
@@ -7,6 +7,7 @@
     <meta name="keywords" content="张翔云，翔云，Abracadabra，AbracadabraZ，Abra Z，个人网站，博客，互联网" />
     <title>翔云的博客 | Abracadabra' s Blog</title>
     <link rel="stylesheet" href="../css/default.css" />
+    <link rel="stylesheet" href="../css/sign.css" />
 </head>
 
 <body>
@@ -29,15 +30,21 @@
     </header>
 
     <div class="container">
-      <div class="user_name">
 
-      </div>
-      <div class="user_psw">
-
-      </div>
-      <div class="sign_button">
-        <button type="submit" class="sign_in"></button>
-      </div>
+        <div class="user_name">
+            <span class="user_text">昵&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp称：</span>
+            <input class="user_blank" id="user_name" type="text" />
+        </div>
+        <div class="user_psw">
+            <span class="user_text">密&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp码：</span>
+            <input class="user_blank" id="user_psw" type="password" maxlength="20" />
+        </div>
+        <div class="small_button">
+            <input class="sign_button" id="sign_in_button" type="submit" value="登陆" />
+            <div class="sign_link">
+                <a href="./sign_up.html">尚未拥有账号？前去注册~</a>
+            </div>
+        </div>
 
     </div>
 
