--- a/web/www/view/sign_up.html
+++ b/web/www/view/sign_up.html
@@ -7,6 +7,7 @@
     <meta name="keywords" content="张翔云，翔云，Abracadabra，AbracadabraZ，Abra Z，个人网站，博客，互联网" />
     <title>翔云的博客 | Abracadabra' s Blog</title>
     <link rel="stylesheet" href="../css/default.css" />
+    <link rel="stylesheet" href="../css/sign.css" />
 </head>
 
 <body>
@@ -29,6 +30,25 @@
     </header>
 
     <div class="container">
+
+        <div class="user_name">
+            <span class="user_text">昵&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp称：</span>
+            <input class="user_blank" id="user_name" type="text" />
+        </div>
+        <div class="user_psw">
+            <span class="user_text">密&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp码：</span>
+            <input class="user_blank" id="user_psw" type="password" maxlength="20" />
+        </div>
+        <div class="user_psw_confirm">
+            <span class="user_text">确认密码：</span>
+            <input class="user_blank" id="user_psw_confirm" type="password" maxlength="20" />
+        </div>
+        <div class="small_button">
+            <input class="sign_button" id="sign_up_button" type="submit" value="注册" />
+            <div class="sign_link">
+                <a href="./sign_in.html">已有账号？前去登陆~</a>
+            </div>
+        </div>
 
     </div>
 
