--- a/web/www/view/index.html
+++ b/web/www/view/index.html
@@ -7,6 +7,7 @@
     <meta name="keywords" content="张翔云，翔云，Abracadabra，AbracadabraZ，Abra Z，个人网站，博客，互联网" />
     <title>翔云的博客 | Abracadabra' s Blog</title>
     <link rel="stylesheet" href="../css/default.css" />
+    <link rel="stylesheet" href="../css/index.css" />
 </head>
 
 <body>
@@ -29,8 +30,115 @@
     </header>
 
     <div class="container">
-        <div class="left"></div>
-        <div class="right"></div>
+        <div class="left">
+            <div class="art_preview">
+                <h2 class="art_preview_title"><a href="./artical_content.html">这里是首页日志标题</a></h2>
+                <p class="art_tags">
+                    <span id="%tag1_name"><a href="./tags_detail.html">tag1_name</a></span>
+                    <span id="%tag2_name"><a href="./tags_detail.html">tag2_name</a></span>
+                </p>
+                <p class="art_preview_content">
+                    <a href="./artical_content.html">
+                    这里是首页日志预览这里是首页日志预览这里是首页日志预览这里是首页日志预览这里是首页日志预览这里是首页日志预览这里是首页日志预览这里是首页日志预览这里是首页日志预览
+                    </a>
+                </p>
+                <p class="posted_time">
+                    Posted By XXX. XXXX-XX-XX XX:XX:XX
+                </p>
+            </div>
+            <div class="art_preview">
+                <h2 class="art_preview_title"><a href="./artical_content.html">这里是首页日志标题</a></h2>
+                <p class="art_tags">
+                    <span id="%tag1_name"><a href="./tags_detail.html">tag1_name</a></span>
+                    <span id="%tag2_name"><a href="./tags_detail.html">tag2_name</a></span>
+                </p>
+                <p class="art_preview_content">
+                    <a href="./artical_content.html">
+                    这里是首页日志预览这里是首页日志预览这里是首页日志预览这里是首页日志预览这里是首页日志预览这里是首页日志预览这里是首页日志预览这里是首页日志预览这里是首页日志预览
+                    </a>
+                </p>
+                <p class="posted_time">
+                    Posted By XXX. XXXX-XX-XX XX:XX:XX
+                </p>
+            </div>
+            <div class="art_preview">
+                <h2 class="art_preview_title"><a href="./artical_content.html">这里是首页日志标题</a></h2>
+                <p class="art_tags">
+                    <span id="%tag1_name"><a href="./tags_detail.html">tag1_name</a></span>
+                    <span id="%tag2_name"><a href="./tags_detail.html">tag2_name</a></span>
+                </p>
+                <p class="art_preview_content">
+                    <a href="./artical_content.html">
+                    这里是首页日志预览这里是首页日志预览这里是首页日志预览这里是首页日志预览这里是首页日志预览这里是首页日志预览这里是首页日志预览这里是首页日志预览这里是首页日志预览
+                    </a>
+                </p>
+                <p class="posted_time">
+                    Posted By XXX. XXXX-XX-XX XX:XX:XX
+                </p>
+            </div>
+            <p class="more">
+                <a href="./artical.html">更多...</a>
+            </p>
+        </div>
+        <div class="right">
+
+            <div class="msg_area">
+                <h3 class="msg_preview_title"><a href="./msg.html">留言板</a></h2>
+              <div class="msg_board">
+                  <div class="msg_preview">
+                    <p class="msg_preview_content">
+                      <a href="./msg_content.html">这里是留言预览这里是留言预览这里是留言预览这里是留言预览</a>
+                    </p>
+                    <p class="posted_time">
+                      xx-xx
+                    </p>
+                  </div>
+                  <div class="msg_preview">
+                    <p class="msg_preview_content">
+                      <a href="./msg_content.html">这里是留言预览这里是留言预览这里是留言预览这里是留言预览</a>
+                    </p>
+                    <p class="posted_time">
+                      xx-xx
+                    </p>
+                  </div>
+                  <div class="msg_preview">
+                    <p class="msg_preview_content">
+                      <a href="./msg_content.html">这里是留言预览这里是留言预览这里是留言预览这里是留言预览</a>
+                    </p>
+                    <p class="posted_time">
+                      xx-xx
+                    </p>
+                  </div>
+                  <div class="msg_preview">
+                    <p class="msg_preview_content">
+                      <a href="./msg_content.html">这里是留言预览这里是留言预览这里是留言预览这里是留言预览</a>
+                    </p>
+                    <p class="posted_time">
+                      xx-xx
+                    </p>
+                  </div>
+                  <div class="msg_preview">
+                    <p class="msg_preview_content">
+                      <a href="./msg_content.html">这里是留言预览这里是留言预览这里是留言预览这里是留言预览</a>
+                    </p>
+                    <p class="posted_time">
+                      xx-xx
+                    </p>
+                  </div>
+                  <p class="more">
+                      <a href="./msg.html">更多...</a>
+                  </p>
+              </div>
+          </div>
+          <div class="tags_area">
+              <h3 class="tags_title"><a href="./tags.html">Tags</a></h3>
+              <div class="tags_board">
+                <span id="%tag1_name"><a href="./tags_detail.html">tag1_name</a></span>
+                <span id="%tag2_name"><a href="./tags_detail.html">tag2_name</a></span>
+              </div>
+          </div>
+
+        </div>
         <div class="clear-float"></div>
     </div>
 
