index页面左侧布局 & 样式完成，修改header背景图片，增加渐变效果

--- a/web/www/css/index.css
+++ b/web/www/css/index.css
@@ -2,6 +2,48 @@
     width: 570px;
     float: left;
 }
+.art_preview{
+  margin: 40px 60px;
+}
+
+.art_preview_title{
+  font-size: 32px;
+}
+.art_tags{
+  font-size: 14px;
+  margin-top: 5px;
+  margin-bottom: 15px;
+  padding-right: 35px;
+  text-align: right;
+}
+
+.art_preview_content{
+  font-size: 16px;
+  margin:10px auto;
+  padding-left: 20px;
+  padding-right: 20px;
+  text-indent: 2em;
+}
+
+.art_preview .posted_time{
+  font-size: 14px;
+  margin-top: 5px;
+  text-align: right;
+  padding-right: 35px;
+}
+
+.more{
+  margin: 10px auto;
+  text-align: center;
+  font-size: 16px;
+  border: 1px solid black;
+  width: 410px;
+  height: 20px;
+}
+.more_link:hover {
+    color: black;
+    font-weight: bolder;
+}
 
 .right {
     width: 430px;
