--- a/web/www/view/index.html
+++ b/web/www/view/index.html
@@ -33,52 +33,51 @@
         <div class="left">
             <div class="art_preview">
                 <h2 class="art_preview_title"><a href="./artical_content.html">这里是首页日志标题</a></h2>
-                <p class="art_tags">
-                    <span id="%tag1_name"><a href="./tags_detail.html">tag1_name</a></span>
-                    <span id="%tag2_name"><a href="./tags_detail.html">tag2_name</a></span>
+                <p class="posted_time">
+                    Posted By XXX. XXXX-XX-XX XX:XX:XX
                 </p>
                 <p class="art_preview_content">
                     <a href="./artical_content.html">
                     这里是首页日志预览这里是首页日志预览这里是首页日志预览这里是首页日志预览这里是首页日志预览这里是首页日志预览这里是首页日志预览这里是首页日志预览这里是首页日志预览
                     </a>
                 </p>
-                <p class="posted_time">
-                    Posted By XXX. XXXX-XX-XX XX:XX:XX
+                <p class="art_tags">
+                    <span id="%tag1_name"><a href="./tags_detail.html">tag1_name</a></span>
+                    <span id="%tag2_name"><a href="./tags_detail.html">tag2_name</a></span>
                 </p>
             </div>
             <div class="art_preview">
                 <h2 class="art_preview_title"><a href="./artical_content.html">这里是首页日志标题</a></h2>
-                <p class="art_tags">
-                    <span id="%tag1_name"><a href="./tags_detail.html">tag1_name</a></span>
-                    <span id="%tag2_name"><a href="./tags_detail.html">tag2_name</a></span>
+                <p class="posted_time">
+                    Posted By XXX. XXXX-XX-XX XX:XX:XX
                 </p>
                 <p class="art_preview_content">
                     <a href="./artical_content.html">
                     这里是首页日志预览这里是首页日志预览这里是首页日志预览这里是首页日志预览这里是首页日志预览这里是首页日志预览这里是首页日志预览这里是首页日志预览这里是首页日志预览
                     </a>
                 </p>
-                <p class="posted_time">
-                    Posted By XXX. XXXX-XX-XX XX:XX:XX
+                <p class="art_tags">
+                    <span id="%tag1_name"><a href="./tags_detail.html">tag1_name</a></span>
+                    <span id="%tag2_name"><a href="./tags_detail.html">tag2_name</a></span>
                 </p>
-            </div>
-            <div class="art_preview">
+            </div><div class="art_preview">
                 <h2 class="art_preview_title"><a href="./artical_content.html">这里是首页日志标题</a></h2>
-                <p class="art_tags">
-                    <span id="%tag1_name"><a href="./tags_detail.html">tag1_name</a></span>
-                    <span id="%tag2_name"><a href="./tags_detail.html">tag2_name</a></span>
+                <p class="posted_time">
+                    Posted By XXX. XXXX-XX-XX XX:XX:XX
                 </p>
                 <p class="art_preview_content">
                     <a href="./artical_content.html">
                     这里是首页日志预览这里是首页日志预览这里是首页日志预览这里是首页日志预览这里是首页日志预览这里是首页日志预览这里是首页日志预览这里是首页日志预览这里是首页日志预览
                     </a>
                 </p>
-                <p class="posted_time">
-                    Posted By XXX. XXXX-XX-XX XX:XX:XX
+                <p class="art_tags">
+                    <span id="%tag1_name"><a href="./tags_detail.html">tag1_name</a></span>
+                    <span id="%tag2_name"><a href="./tags_detail.html">tag2_name</a></span>
                 </p>
             </div>
-            <p class="more">
-                <a href="./artical.html">更多...</a>
-            </p>
+            <a href="./artical.html" class="more_link"><p class="more">
+                更多...
+            </p></a>
         </div>
         <div class="right">
 
@@ -132,11 +131,11 @@
           </div>
           <div class="tags_area">
               <h3 class="tags_title"><a href="./tags.html">Tags</a></h3>
-              <div class="tags_board">
-                <span id="%tag1_name"><a href="./tags_detail.html">tag1_name</a></span>
-                <span id="%tag2_name"><a href="./tags_detail.html">tag2_name</a></span>
-              </div>
-          </div>
+                <div class="tags_board">
+                    <span id="%tag1_name"><a href="./tags_detail.html">tag1_name</a></span>
+                    <span id="%tag2_name"><a href="./tags_detail.html">tag2_name</a></span>
+                </div>
+            </div>
 
         </div>
         <div class="clear-float"></div>
