--- a/web/www/css/default.css
+++ b/web/www/css/default.css
@@ -99,6 +99,7 @@ h3 {
 .blog-title {
     position: relative;
     top: 70px;
+    left: 30px;
     width: 570px;
 }
 
@@ -144,6 +145,7 @@ footer {
 .copyright {
     text-align: center;
     margin-top: 40px;
+    margin-bottom: 40px;
     color: gray;
     font-size: 16px;
     font-weight: bold;
