--- a/web/www/view/index.html
+++ b/web/www/view/index.html
@@ -75,9 +75,9 @@
                     <span id="%tag2_name"><a href="./tags_detail.html">tag2_name</a></span>
                 </p>
             </div>
-            <a href="./artical.html" class="more_link"><p class="more">
-                更多...
-            </p></a>
+            <a href="./artical.html" class="more_link">
+              <p class="more">更多...</p>
+          </a>
         </div>
         <div class="right">
 
@@ -89,7 +89,7 @@
                       <a href="./msg_content.html">这里是留言预览这里是留言预览这里是留言预览这里是留言预览</a>
                     </p>
                     <p class="posted_time">
-                      xx-xx
+                      Posted at xx-xx
                     </p>
                   </div>
                   <div class="msg_preview">
@@ -97,7 +97,7 @@
                       <a href="./msg_content.html">这里是留言预览这里是留言预览这里是留言预览这里是留言预览</a>
                     </p>
                     <p class="posted_time">
-                      xx-xx
+                      Posted at xx-xx
                     </p>
                   </div>
                   <div class="msg_preview">
@@ -105,7 +105,7 @@
                       <a href="./msg_content.html">这里是留言预览这里是留言预览这里是留言预览这里是留言预览</a>
                     </p>
                     <p class="posted_time">
-                      xx-xx
+                      Posted at xx-xx
                     </p>
                   </div>
                   <div class="msg_preview">
@@ -113,7 +113,7 @@
                       <a href="./msg_content.html">这里是留言预览这里是留言预览这里是留言预览这里是留言预览</a>
                     </p>
                     <p class="posted_time">
-                      xx-xx
+                      Posted at xx-xx
                     </p>
                   </div>
                   <div class="msg_preview">
@@ -121,12 +121,12 @@
                       <a href="./msg_content.html">这里是留言预览这里是留言预览这里是留言预览这里是留言预览</a>
                     </p>
                     <p class="posted_time">
-                      xx-xx
+                      Posted at xx-xx
                     </p>
                   </div>
-                  <p class="more">
-                      <a href="./msg.html">更多...</a>
-                  </p>
+                  <a href="./artical.html" class="more_link">
+                    <p class="more">更多...</p>
+                </a>
               </div>
           </div>
           <div class="tags_area">
