--- a/web/www/view/index.html
+++ b/web/www/view/index.html
@@ -132,8 +132,8 @@
           <div class="tags_area">
               <h3 class="tags_title"><a href="./tags.html">Tags</a></h3>
                 <div class="tags_board">
-                    <span id="%tag1_name"><a href="./tags_detail.html">tag1_name</a></span>
-                    <span id="%tag2_name"><a href="./tags_detail.html">tag2_name</a></span>
+                    <span id="%tag1_name" class="tags_name" ><a href="./tags_detail.html">tag1_name</a></span>
+                    <span id="%tag2_name" class="tags_name" ><a href="./tags_detail.html">tag2_name</a></span>
                 </div>
             </div>
 
