--- a/web/www/view/artical.html
+++ b/web/www/view/artical.html
@@ -7,6 +7,7 @@
     <meta name="keywords" content="张翔云，翔云，Abracadabra，AbracadabraZ，Abra Z，个人网站，博客，互联网" />
     <title>翔云的博客 | Abracadabra' s Blog</title>
     <link rel="stylesheet" href="../css/default.css" />
+    <link rel="stylesheet" href="../css/list.css" />
 </head>
 
 <body>
@@ -29,7 +30,9 @@
     </header>
 
     <div class="container">
+        <div class="board">
 
+        </div>
     </div>
 
     <footer>
