--- a/web/www/view/artical.html
+++ b/web/www/view/artical.html
@@ -31,7 +31,85 @@
 
     <div class="container">
         <div class="board">
-
+            <h4 class="list_title">日志列表</h4>
+            <div class="list_board">
+                <div class="lists">
+                    <a href="./artical_content.html"><h5 class="art_list_title">日志标题日志标题</h5></a>
+                    <p class="posted_time">
+                        Posted By XXX XXXX-XX-XX XX:XX:XX
+                    </p>
+                    <div class="clear-float"></div>
+                    <hr />
+                </div>
+                <div class="lists">
+                    <a href="./artical_content.html"><h5 class="art_list_title">日志标题日志标题</h5></a>
+                    <p class="posted_time">
+                        Posted By XXX XXXX-XX-XX XX:XX:XX
+                    </p>
+                    <div class="clear-float"></div>
+                    <hr />
+                </div><div class="lists">
+                    <a href="./artical_content.html"><h5 class="art_list_title">日志标题日志标题</h5></a>
+                    <p class="posted_time">
+                        Posted By XXX XXXX-XX-XX XX:XX:XX
+                    </p>
+                    <div class="clear-float"></div>
+                    <hr />
+                </div><div class="lists">
+                    <a href="./artical_content.html"><h5 class="art_list_title">日志标题日志标题</h5></a>
+                    <p class="posted_time">
+                        Posted By XXX XXXX-XX-XX XX:XX:XX
+                    </p>
+                    <div class="clear-float"></div>
+                    <hr />
+                </div><div class="lists">
+                    <a href="./artical_content.html"><h5 class="art_list_title">日志标题日志标题</h5></a>
+                    <p class="posted_time">
+                        Posted By XXX XXXX-XX-XX XX:XX:XX
+                    </p>
+                    <div class="clear-float"></div>
+                    <hr />
+                </div><div class="lists">
+                    <a href="./artical_content.html"><h5 class="art_list_title">日志标题日志标题</h5></a>
+                    <p class="posted_time">
+                        Posted By XXX XXXX-XX-XX XX:XX:XX
+                    </p>
+                    <div class="clear-float"></div>
+                    <hr />
+                </div><div class="lists">
+                    <a href="./artical_content.html"><h5 class="art_list_title">日志标题日志标题</h5></a>
+                    <p class="posted_time">
+                        Posted By XXX XXXX-XX-XX XX:XX:XX
+                    </p>
+                    <div class="clear-float"></div>
+                    <hr />
+                </div><div class="lists">
+                    <a href="./artical_content.html"><h5 class="art_list_title">日志标题日志标题</h5></a>
+                    <p class="posted_time">
+                        Posted By XXX XXXX-XX-XX XX:XX:XX
+                    </p>
+                    <div class="clear-float"></div>
+                    <hr />
+                </div><div class="lists">
+                    <a href="./artical_content.html"><h5 class="art_list_title">日志标题日志标题</h5></a>
+                    <p class="posted_time">
+                        Posted By XXX XXXX-XX-XX XX:XX:XX
+                    </p>
+                    <div class="clear-float"></div>
+                    <hr />
+                </div><div class="lists">
+                    <a href="./artical_content.html"><h5 class="art_list_title">日志标题日志标题</h5></a>
+                    <p class="posted_time">
+                        Posted By XXX XXXX-XX-XX XX:XX:XX
+                    </p>
+                    <div class="clear-float"></div>
+                    <hr />
+                </div>
+            </div>
+            <div class="page">
+              <a href=""><span class="post">上一页</span></a>
+              <a href=""><span class="next">下一页</span></a>
+            </div>
         </div>
     </div>
 
