--- a/web/www/view/artical_content.html
+++ b/web/www/view/artical_content.html
@@ -7,6 +7,7 @@
     <meta name="keywords" content="张翔云，翔云，Abracadabra，AbracadabraZ，Abra Z，个人网站，博客，互联网" />
     <title>翔云的博客 | Abracadabra' s Blog</title>
     <link rel="stylesheet" href="../css/default.css" />
+    <link rel="stylesheet" href="../css/content.css" />
 </head>
 
 <body>
@@ -30,7 +31,23 @@
 
     <div class="container">
         <div class="board">
-
+            <a href="./artical.html" class="back">
+                <p class="back_button">
+                    返回
+                </p>
+            </a>
+            <h4 class="art_title">日志标题</h4>
+            <p class="posted_time">
+                Posted By XXX XXXX-XX-XX XX:XX:XX
+            </p>
+            <hr />
+            <p class="art_content">
+                这里是日志全部内容这里是日志全部内容这里是日志全部内容这里是日志全部内容这里是日志全部内容这里是日志全部内容这里是日志全部内容这里是日志全部内容这里是日志全部内容这里是日志全部内容这里是日志全部内容 这里是日志全部内容 这里是日志全部内容 这里是日志全部内容 这里是日志全部内容 这里是日志全部内容这里是日志全部内容
+            </p>
+            <div class="page">
+                <a href=""><span class="post">上一页</span></a>
+                <a href=""><span class="next">下一页</span></a>
+            </div>
         </div>
     </div>
 
