--- a/web/www/view/msg_content.html
+++ b/web/www/view/msg_content.html
@@ -7,6 +7,7 @@
     <meta name="keywords" content="张翔云，翔云，Abracadabra，AbracadabraZ，Abra Z，个人网站，博客，互联网" />
     <title>翔云的博客 | Abracadabra' s Blog</title>
     <link rel="stylesheet" href="../css/default.css" />
+    <link rel="stylesheet" href="../css/content.css" />
 </head>
 
 <body>
@@ -30,7 +31,18 @@
 
     <div class="container">
         <div class="board">
-
+            <a href="./msg.html" class="back">
+                <p class="back_button">
+                    返回
+                </p>
+            </a>
+            <p class="posted_time" style="margin-top:100px">
+                Posted By XXX XXXX-XX-XX XX:XX:XX
+            </p>
+            <hr />
+            <p class="msg_content">
+                这里是留言内容这里是留言内容这里是留言内容这里是留言内容这里是留言内容这里是留言内容这里是留言内容这里是留言内容这里是留言内容这里是留言内容这里是留言内容这里是留言内容
+            </p>
         </div>
     </div>
 
