--- a/web/www/view/tags_detail.html
+++ b/web/www/view/tags_detail.html
@@ -7,6 +7,7 @@
     <meta name="keywords" content="张翔云，翔云，Abracadabra，AbracadabraZ，Abra Z，个人网站，博客，互联网" />
     <title>翔云的博客 | Abracadabra' s Blog</title>
     <link rel="stylesheet" href="../css/default.css" />
+    <link rel="stylesheet" href="../css/list.css" />
 </head>
 
 <body>
@@ -30,6 +31,85 @@
 
     <div class="container">
         <div class="board">
+          <h4 class="list_title">Tag_Name</h4>
+          <div class="list_board">
+              <div class="lists">
+                  <a href="./artical_content.html"><h5 class="art_list_title">日志标题日志标题</h5></a>
+                  <p class="posted_time">
+                      Posted By XXX XXXX-XX-XX XX:XX:XX
+                  </p>
+                  <div class="clear-float"></div>
+                  <hr />
+              </div>
+              <div class="lists">
+                  <a href="./artical_content.html"><h5 class="art_list_title">日志标题日志标题</h5></a>
+                  <p class="posted_time">
+                      Posted By XXX XXXX-XX-XX XX:XX:XX
+                  </p>
+                  <div class="clear-float"></div>
+                  <hr />
+              </div><div class="lists">
+                  <a href="./artical_content.html"><h5 class="art_list_title">日志标题日志标题</h5></a>
+                  <p class="posted_time">
+                      Posted By XXX XXXX-XX-XX XX:XX:XX
+                  </p>
+                  <div class="clear-float"></div>
+                  <hr />
+              </div><div class="lists">
+                  <a href="./artical_content.html"><h5 class="art_list_title">日志标题日志标题</h5></a>
+                  <p class="posted_time">
+                      Posted By XXX XXXX-XX-XX XX:XX:XX
+                  </p>
+                  <div class="clear-float"></div>
+                  <hr />
+              </div><div class="lists">
+                  <a href="./artical_content.html"><h5 class="art_list_title">日志标题日志标题</h5></a>
+                  <p class="posted_time">
+                      Posted By XXX XXXX-XX-XX XX:XX:XX
+                  </p>
+                  <div class="clear-float"></div>
+                  <hr />
+              </div><div class="lists">
+                  <a href="./artical_content.html"><h5 class="art_list_title">日志标题日志标题</h5></a>
+                  <p class="posted_time">
+                      Posted By XXX XXXX-XX-XX XX:XX:XX
+                  </p>
+                  <div class="clear-float"></div>
+                  <hr />
+              </div><div class="lists">
+                  <a href="./artical_content.html"><h5 class="art_list_title">日志标题日志标题</h5></a>
+                  <p class="posted_time">
+                      Posted By XXX XXXX-XX-XX XX:XX:XX
+                  </p>
+                  <div class="clear-float"></div>
+                  <hr />
+              </div><div class="lists">
+                  <a href="./artical_content.html"><h5 class="art_list_title">日志标题日志标题</h5></a>
+                  <p class="posted_time">
+                      Posted By XXX XXXX-XX-XX XX:XX:XX
+                  </p>
+                  <div class="clear-float"></div>
+                  <hr />
+              </div><div class="lists">
+                  <a href="./artical_content.html"><h5 class="art_list_title">日志标题日志标题</h5></a>
+                  <p class="posted_time">
+                      Posted By XXX XXXX-XX-XX XX:XX:XX
+                  </p>
+                  <div class="clear-float"></div>
+                  <hr />
+              </div><div class="lists">
+                  <a href="./artical_content.html"><h5 class="art_list_title">日志标题日志标题</h5></a>
+                  <p class="posted_time">
+                      Posted By XXX XXXX-XX-XX XX:XX:XX
+                  </p>
+                  <div class="clear-float"></div>
+                  <hr />
+              </div>
+          </div>
+          <div class="page">
+            <a href=""><span class="post">上一页</span></a>
+            <a href=""><span class="next">下一页</span></a>
+          </div>
 
         </div>
     </div>
