--- a/web/www/view/msg_add.html
+++ b/web/www/view/msg_add.html
@@ -7,6 +7,7 @@
     <meta name="keywords" content="张翔云，翔云，Abracadabra，AbracadabraZ，Abra Z，个人网站，博客，互联网" />
     <title>翔云的博客 | Abracadabra' s Blog</title>
     <link rel="stylesheet" href="../css/default.css" />
+    <link rel="stylesheet" href="../css/add.css" />
 </head>
 
 <body>
@@ -30,7 +31,17 @@
 
     <div class="container">
         <div class="board">
-
+            <div>
+                <p class="content">
+                    <span>正文：</span>
+                    <input type="text" class="msg_content_add" />
+                </p>
+                <div class="float-clear"></div>
+            </div>
+            <div class="add_button">
+                <input type="submit" value="提交" />
+                <input type="button" value="返回" onclick="history.go(-1)" />
+            </div>
         </div>
     </div>
 
