完成tag页面以及about页面

--- a/web/www/view/about.html
+++ b/web/www/view/about.html
@@ -7,6 +7,7 @@
     <meta name="keywords" content="张翔云，翔云，Abracadabra，AbracadabraZ，Abra Z，个人网站，博客，互联网" />
     <title>翔云的博客 | Abracadabra' s Blog</title>
     <link rel="stylesheet" href="../css/default.css" />
+    <link rel="stylesheet" href="../css/about.css" />
 </head>
 
 <body>
@@ -30,7 +31,12 @@
 
     <div class="container">
         <div class="board">
-
+            <div class="photo">
+                <img src="" style="width: 120px;height: 150px;background-color: gray" />
+            </div>
+            <p class="intro">
+                自我介绍啦自我介绍啦自我介绍啦自我介绍啦自我介绍啦自我介绍啦
+            </p>
         </div>
     </div>
 
