--- a/web/www/view/tags.html
+++ b/web/www/view/tags.html
@@ -7,6 +7,7 @@
     <meta name="keywords" content="张翔云，翔云，Abracadabra，AbracadabraZ，Abra Z，个人网站，博客，互联网" />
     <title>翔云的博客 | Abracadabra' s Blog</title>
     <link rel="stylesheet" href="../css/default.css" />
+    <link rel="stylesheet" href="../css/tags.css" />
 </head>
 
 <body>
@@ -30,6 +31,22 @@
 
     <div class="container">
         <div class="board">
+            <h4 class="tags">Tags</h4>
+            <div class="tag_board">
+                <p id="tag1_name">
+                    <a href="./tags_detail.html">tag1_name</a>
+                </p>
+                <p id="tag2_name">
+                    <a href="./tags_detail.html">tag2_name</a>
+                </p>
+                <p id="tag3_name">
+                    <a href="./tags_detail.html">tag3_name</a>
+                </p>
+                <p id="tag4_name">
+                    <a href="./tags_detail.html">tag4_name</a>
+                </p>
+                <div class="clear-float"></div>
+            </div>
 
         </div>
     </div>
