--- a/web/www/view/msg_add.html
+++ b/web/www/view/msg_add.html
@@ -31,17 +31,19 @@
 
     <div class="container">
         <div class="board">
-            <div>
-                <p class="content">
-                    <span>正文：</span>
-                    <input type="text" class="msg_content_add" />
-                </p>
-                <div class="float-clear"></div>
-            </div>
-            <div class="add_button">
-                <input type="submit" value="提交" />
-                <input type="button" value="返回" onclick="history.go(-1)" />
-            </div>
+            <form action="" method="post">
+                <div>
+                    <p class="content">
+                        <span>留言：</span>
+                        <input type="text" class="msg_content_add" name="msg_content" />
+                    </p>
+                    <div class="float-clear"></div>
+                </div>
+                <div class="add_button">
+                    <input type="submit" value="提交" />
+                    <input type="button" value="返回" onclick="history.go(-1)" />
+                </div>
+            </form>
         </div>
     </div>
 
