留言列表功能

--- a/web/www/view/msg.html
+++ b/web/www/view/msg.html
@@ -37,86 +37,17 @@
             </p>
             <div class="clear-float"></div>
             <div class="list_board">
+                <?php foreach($msglist as $m) { ?>
                 <div class="lists">
-                    <a href="./msg_content.php"><h5 class="msg_list_title">留言前二十字留言前二十字留言前二十字留言</h5></a>
+                    <h5 class="msg_list_title"><?php echo $m['msg_content']; ?></h5>
                     <p class="posted_time">
                         Posted By XXX XXXX-XX-XX XX:XX:XX
+                        <a href="" style="color: gray;font-size: 14px">删除</a>
                     </p>
                     <div class="clear-float"></div>
                     <hr />
                 </div>
-                <div class="lists">
-                    <a href="./msg_content.php"><h5 class="msg_list_title">留言前二十字留言前二十字留言前二十字留言</h5></a>
-                    <p class="posted_time">
-                        Posted By XXX XXXX-XX-XX XX:XX:XX
-                    </p>
-                    <div class="clear-float"></div>
-                    <hr />
-                </div>
-                <div class="lists">
-                    <a href="./msg_content.php"><h5 class="msg_list_title">留言前二十字留言前二十字留言前二十字留言</h5></a>
-                    <p class="posted_time">
-                        Posted By XXX XXXX-XX-XX XX:XX:XX
-                    </p>
-                    <div class="clear-float"></div>
-                    <hr />
-                </div>
-                <div class="lists">
-                    <a href="./msg_content.php"><h5 class="msg_list_title">留言前二十字留言前二十字留言前二十字留言</h5></a>
-                    <p class="posted_time">
-                        Posted By XXX XXXX-XX-XX XX:XX:XX
-                    </p>
-                    <div class="clear-float"></div>
-                    <hr />
-                </div>
-                <div class="lists">
-                    <a href="./msg_content.php"><h5 class="msg_list_title">留言前二十字留言前二十字留言前二十字留言</h5></a>
-                    <p class="posted_time">
-                        Posted By XXX XXXX-XX-XX XX:XX:XX
-                    </p>
-                    <div class="clear-float"></div>
-                    <hr />
-                </div>
-                <div class="lists">
-                    <a href="./msg_content.php"><h5 class="msg_list_title">留言前二十字留言前二十字留言前二十字留言</h5></a>
-                    <p class="posted_time">
-                        Posted By XXX XXXX-XX-XX XX:XX:XX
-                    </p>
-                    <div class="clear-float"></div>
-                    <hr />
-                </div>
-                <div class="lists">
-                    <a href="./msg_content.php"><h5 class="msg_list_title">留言前二十字留言前二十字留言前二十字留言</h5></a>
-                    <p class="posted_time">
-                        Posted By XXX XXXX-XX-XX XX:XX:XX
-                    </p>
-                    <div class="clear-float"></div>
-                    <hr />
-                </div>
-                <div class="lists">
-                    <a href="./msg_content.php"><h5 class="msg_list_title">留言前二十字留言前二十字留言前二十字留言</h5></a>
-                    <p class="posted_time">
-                        Posted By XXX XXXX-XX-XX XX:XX:XX
-                    </p>
-                    <div class="clear-float"></div>
-                    <hr />
-                </div>
-                <div class="lists">
-                    <a href="./msg_content.php"><h5 class="msg_list_title">留言前二十字留言前二十字留言前二十字留言</h5></a>
-                    <p class="posted_time">
-                        Posted By XXX XXXX-XX-XX XX:XX:XX
-                    </p>
-                    <div class="clear-float"></div>
-                    <hr />
-                </div>
-                <div class="lists">
-                    <a href="./msg_content.php"><h5 class="msg_list_title">留言前二十字留言前二十字留言前二十字留言</h5></a>
-                    <p class="posted_time">
-                        Posted By XXX XXXX-XX-XX XX:XX:XX
-                    </p>
-                    <div class="clear-float"></div>
-                    <hr />
-                </div>
+                <?php } ?>
             </div>
             <div class="page">
                 <a href=""><span class="post">上一页</span></a>
