删除留言和添加留言后页面跳转回留言列表

--- a/web/www/view/msg.html
+++ b/web/www/view/msg.html
@@ -33,7 +33,7 @@
         <div class="board">
             <h4 class="list_title">留言列表</h4>
             <p class="add_button">
-                <a href="./msg_add.php">写留言</a>
+                <a href="./lib/msg_add.php">写留言</a>
             </p>
             <div class="clear-float"></div>
             <div class="list_board">
