将方法移至lib文件夹

--- a/web/www/view/artical.html
+++ b/web/www/view/artical.html
@@ -33,7 +33,7 @@
         <div class="board">
             <h4 class="list_title">日志列表</h4>
             <p class="add_button">
-                <a href="./artical_add.php">写日志</a>
+                <a href="../lib/artical_add.php">写日志</a>
             </p>
             <div class="clear-float"></div>
             <div class="list_board">
