--- a/web/www/view/artical_add.html
+++ b/web/www/view/artical_add.html
@@ -15,33 +15,35 @@
         <h1 class="blog-title">欢迎光临Abra的博客</h1>
         <div class="menu">
             <ul>
-                <li><a href="./index.php">首页</a></li>
-                <li><a href="./artical.php">日志</a></li>
-                <li><a href="./msg.php">留言</a></li>
-                <li><a href="./about.php">关于</a></li>
+                <li><a href="../index.php">首页</a></li>
+                <li><a href="../artical.php">日志</a></li>
+                <li><a href="../msg.php">留言</a></li>
+                <li><a href="../about.php">关于</a></li>
             </ul>
         </div>
         <div class="header-button">
             <ul>
-                <li><a href="./sign_in.php">登陆</a></li>
-                <li><a href="./sign_up.php">注册</a></li>
+                <li><a href="../sign_in.php">登陆</a></li>
+                <li><a href="../sign_up.php">注册</a></li>
             </ul>
         </div>
     </header>
 
     <div class="container">
         <div class="board">
-            <p class="title">
-                <span>标题：</span>
-                <input type="text" class="title_add" value="请输入正文" />
-            </p>
-            <p class="tag">
-                <span>标签：</span>
-                <input type="text" class="tag_add" value="用逗号分开多标签，可以为空" </p>
+            <form action="" method="post">
+                <p class="title">
+                    <span>标题：</span>
+                    <input type="text" class="title_add" value="请输入正文" name="title" />
+                </p>
+                <p class="tag">
+                    <span>标签：</span>
+                    <input type="text" class="tag_add" name="tagname" />
+                </p>
                 <div>
                     <p class="content">
                         <span>正文：</span>
-                        <input type="text" class="content_add" />
+                        <input type="text" class="content_add" name="content" />
                     </p>
                     <div class="float-clear"></div>
                 </div>
@@ -49,6 +51,7 @@
                     <input type="submit" value="提交" />
                     <input type="button" value="返回" onclick="history.go(-1)" />
                 </div>
+            </form>
         </div>
     </div>
 
