将日志输入从<input>标签改为<textarea>标签

--- a/web/www/view/artical_add.html
+++ b/web/www/view/artical_add.html
@@ -34,7 +34,7 @@
             <form action="" method="post">
                 <p class="title">
                     <span>标题：</span>
-                    <input type="text" class="title_add" value="请输入正文" name="title" />
+                    <input type="text" class="title_add"  name="title" />
                 </p>
                 <p class="tag">
                     <span>标签：</span>
@@ -43,7 +43,7 @@
                 <div>
                     <p class="content">
                         <span>正文：</span>
-                        <input type="text" class="content_add" name="content" />
+                        <textarea class="content_add" name="content"></textarea>
                     </p>
                     <div class="float-clear"></div>
                 </div>
